--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,5 @@
+cargo-features = ["strip"]
+
 [package]
 name = "makepty"
 version = "0.1.0"
@@ -6,8 +8,14 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[profile.release]
+opt-level = 'z'
+lto = true
+panic = 'abort'
+strip = "symbols"
+
 [dependencies]
 portable-pty = "0.4.0"
 anyhow = "1.0.40"
-#io-streams = "0.4.1"
-io-streams = { git = "https://github.com/sunfishcode/io-streams", branch = "main" }
+io-streams = "0.4.2"
+#io-streams = { git = "https://github.com/sunfishcode/io-streams", branch = "main" }
